# snakesfml

./: .gitignore  CMakeLists.txt  deathScene.cpp  food.cpp  globals.hpp  main.cpp  mainScene.cpp  snake.cpp
